# cohesix

./: .bashrc  .cohesix_env  .env  .gitattributes  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  BATCH_PLAN.md  BUILD_PLAN.md  CHANGELOG.md  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  COHESIX_ELF_FIX_VALIDATION.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bak  Cargo.toml.bak.20250524210533  CodexCheck.md  CohesixBoot.inf  DEPENDENCIES.md  INSTRUCTION_BLOCK.md  LICENSE  METADATA.md  Makefile  Makefile.bak  Makefile.bak.efi_patch  NOTICE.txt  PROJECT_MANIFEST.md  Q_DAY.md  README.md  README_NATIVE.md  REMOTE_ACCESS.md  THREAT_MODEL.md  VALIDATION_SUMMARY.md  bootargs.txt  bootloader.c  bootloader.lds  bootstrap_hal_pcr.sh  (+36 more)
apps/cas-tool/: Cargo.toml
apps/cas-tool/src/: lib.rs  main.rs
apps/cas-tool/tests/: bundle.rs
apps/coh/: Cargo.toml
apps/coh-status/: Cargo.toml
apps/coh-status/src/: lib.rs
apps/coh-status/tests/: trace.rs  transcript.rs
apps/coh/src/: console.rs  doctor.rs  gpu.rs  lib.rs  main.rs  mount.rs  policy.rs  run.rs  telemetry.rs  transport.rs
apps/coh/tests/: mount.rs  peft_export.rs  peft_import.rs  run.rs  telemetry.rs  transcript.rs
apps/cohsh/: Cargo.toml
apps/cohsh/src/: client.rs  lib.rs  main.rs  policy.rs  proto.rs  queen.rs  session_pool.rs  ticket_mint.rs  trace.rs
apps/cohsh/tests/: ack_proto.rs  ack_roundtrip.rs  attach_args.rs  client_lib.rs  interactive_attach.rs  observe_watch_output.rs  ping.rs  pooling.rs  quit_exit.rs  script_catalog.rs  script_check_cli.rs  script_interpreter.rs  shell_behaviour.rs  tcp_cli.rs  tcp_cli_script.rs  tcp_console.rs  ticket_mint.rs  trace.rs  transcripts.rs
apps/gpu-bridge-host/: Cargo.toml  README.md
apps/gpu-bridge-host/src/: lib.rs  main.rs
apps/host-sidecar-bridge/: Cargo.toml
apps/host-sidecar-bridge/src/: lib.rs  main.rs
apps/nine-door/: Cargo.toml  README.md
apps/nine-door/src/: control.rs  kernel.rs  lib.rs  main.rs  namespace.rs
apps/nine-door/tests/: auditfs.rs  cas_provider.rs  host_sidecar_policy.rs  integration.rs  lifecycle.rs  observe.rs  pipelining.rs  policyfs.rs  pressure_counters.rs  replayfs.rs  session_state.rs  shard_scale.rs  telemetry_create.rs  telemetry_envelope.rs  telemetry_quotas.rs  telemetry_ring.rs  ui_providers.rs  ui_security.rs
apps/root-task/: Cargo.toml  README.md  build.rs  build_support.rs  sel4.ld
apps/root-task/src/: alloc.rs  bootinfo_layout.rs  caps.rs  cspace.rs  cspace_view.rs  debug.rs  debug_uart.rs  features.rs  guards.rs  host.rs  ipc.rs  kernel.rs  lib.rs  lifecycle.rs  log_buffer.rs  main.rs  manifest.rs  net_consts.rs  ninedoor.rs  observe.rs  panic.rs  platform.rs  profile.rs  readiness.rs  sel4.rs  sel4_view.rs  trace.rs
apps/root-task/tests/: bootinfo_layout.rs  bootinfo_snapshot_layout.rs  bootstrap_invariants.rs  cache_maintenance.rs  cnode_bad_params.rs  cnode_depth.rs  console_ack_formatter.rs  console_parser.rs  console_read_line.rs  cspace_bits.rs  cspace_boot_window.rs  cspace_encode.rs  cspace_encoding.rs  dispatch_invalid_opcode.rs  dispatch_staged_ok.rs  dispatch_support.rs  dtb_parse.rs  ep_ready.rs  event_pump.rs  ipc_compile_guard.rs  ipc_guards.rs  ipcbuf_dump_bounds.rs  linker_script_classifier.rs  min_console_no_ipc.rs  minimal_console.rs  net_pump.rs  observe_metrics.rs  pl011_offsets.rs  retype_init_cnode.rs  retype_log_format.rs  sel4_syscall_guard.rs  slot_alloc.rs  trace_facade.rs  trace_hex_dump_signature.rs
apps/sidecar-bus/: Cargo.toml
apps/sidecar-bus/src/: lib.rs
apps/swarmui/: Cargo.toml  build.rs  tauri.conf.json
apps/swarmui/frontend/: app.js  events.js  index.html  styles.css
apps/swarmui/src/: cache.rs  generated.rs  hive.rs  lib.rs  transport.rs
apps/swarmui/src-tauri/: main.rs
apps/swarmui/tests/: cache.rs  console_parity.rs  no_http_deps.rs  replay.rs  security.rs  trace.rs  transcript.rs
apps/worker-bus/: Cargo.toml
apps/worker-bus/src/: host.rs  lib.rs
apps/worker-gpu/: Cargo.toml  README.md
apps/worker-gpu/src/: host.rs  kernel.rs  lib.rs  main.rs
apps/worker-heart/: Cargo.toml  README.md
apps/worker-heart/src/: host.rs  kernel.rs  lib.rs  main.rs
apps/worker-lora/: Cargo.toml
apps/worker-lora/src/: common.rs  host.rs  lib.rs
cohesix-9p/: Cargo.toml
cohesix-9p/src/: fs.rs  inprocess.rs  lib.rs  ninep_adapter.rs  policy.rs  server.rs
cohesix-9p/tests/: 9p_fs_concurrency.rs
cohesix-secure9p/: Cargo.toml
cohesix-secure9p/src/: lib.rs  secure_stream.rs
crates/cohesix-ticket/: Cargo.toml  README.md
crates/cohesix-ticket/src/: lib.rs
crates/cohsh-core/: Cargo.toml
crates/cohsh-core/fixtures/: grammar.sha256  ticket_policy.sha256
crates/cohsh-core/src/: command.rs  docs.rs  help.rs  lib.rs  secure9p.rs  tail.rs  tcp.rs  ticket.rs  trace.rs  verb.rs  wire.rs
crates/cohsh-core/tests/: doc_snippets.rs  trace.rs  transcripts.rs
crates/domain-intents/: Cargo.toml
crates/domain-intents/src/: lib.rs
crates/secure9p-codec/: Cargo.toml  README.md
crates/secure9p-codec/src/: batch.rs  codec.rs  (+3 more)
crates/secure9p-core/: Cargo.toml
crates/secure9p-transport/: Cargo.toml
crates/sel4-panicking/: Cargo.toml
crates/sel4-sys/: Cargo.toml  build.rs
tools/cli/: Cargo.toml
tools/coh-rtc/: Cargo.toml
workspace/: Cargo.toml  Makefile  link.ld  sel4_paths.rs
workspace/.cargo/: config.toml
workspace/cohesix/: Cargo.toml  build.rs
workspace/cohesix-9p/: Cargo.toml
workspace/cohesix-secure9p/: Cargo.toml
workspace/cohesix_root/: Cargo.toml  build.rs  sel4-aarch64.canonical.json  sel4-aarch64.json  wrapper.h
workspace/docs/: QUICKSTART.md  ROOT_SPLIT_PLAN_V1.md
workspace/logs/: boot_fix_trace.md
workspace/proto/: orchestrator.proto
workspace/scripts/: __init__.py  bind_cuda.rc  boottrace.py  build_root_elf.sh  check-qemu-deps.sh  deploy-ci.sh  full_trace_audit.py  generate_busybox_man.sh  manual_efi_link.sh  newns-e.rc  preview_man.sh  run-smoke-tests.sh  run_oss_audit.sh  snapshot_writer.py
workspace/sel4-sys/: Cargo.toml  DEPRECATED.md  build.rs  wrapper.h
workspace/sel4-sys-extern-wrapper/: Cargo.toml  README.md  build.rs
(+1955 files in other folders)
