# Author: Lukas Bower
# Purpose: Define the Cohesix workspace members and shared dependencies.
[workspace]
members = [
    "apps/cohesix-proto",
    "apps/console-ack-wire",
    "apps/cohsh",
    "apps/root-task",
    "apps/nine-door",
    "apps/worker-heart",
    "apps/worker-gpu",
    "apps/gpu-bridge-host",
    "crates/cohesix-ticket",
    "crates/secure9p-codec",
    "crates/secure9p-core",
    "crates/secure9p-transport",
    "crates/domain-intents",
    "crates/boot/uefi-elfloader-shim",
    "crates/trace-model",
    "crates/sel4-panicking",
    "crates/sel4-runtime",
    "crates/sel4-sys",
    "crates/net-constants",
    "tests",
]
resolver = "2"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
debug = 0
panic = "abort"
incremental = false
strip = "debuginfo"
split-debuginfo = "off"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
cohesix-ticket = { path = "crates/cohesix-ticket" }
secure9p-codec = { path = "crates/secure9p-codec" }
secure9p-core = { path = "crates/secure9p-core" }
secure9p-transport = { path = "crates/secure9p-transport" }
anyhow = "1.0"
thiserror = { version = "2.0", default-features = false }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
base64 = "0.22"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
rand = "0.9"
cohesix-net-constants = { path = "crates/net-constants" }
cohesix-proto = { path = "apps/cohesix-proto" }
console-ack-wire = { path = "apps/console-ack-wire" }

[patch.crates-io]
sel4-sys = { path = "crates/sel4-sys" }
