# Author: Lukas Bower
# Purpose: Define the Cohesix workspace members and shared dependencies.
[workspace]
members = [
    "apps/cohesix-proto",
    "apps/console-ack-wire",
    "apps/cohsh",
    "apps/cas-tool",
    "apps/root-task",
    "apps/nine-door",
    "apps/worker-heart",
    "apps/worker-gpu",
    "apps/worker-bus",
    "apps/worker-lora",
    "apps/sidecar-bus",
    "apps/gpu-bridge-host",
    "apps/host-sidecar-bridge",
    "crates/cohesix-cas",
    "crates/cohesix-ticket",
    "crates/cohsh-core",
    "crates/secure9p-codec",
    "crates/secure9p-core",
    "crates/secure9p-transport",
    "crates/domain-intents",
    "crates/boot/uefi-elfloader-shim",
    "crates/trace-model",
    "crates/sel4-panicking",
    "crates/sel4-runtime",
    "crates/sel4-sys",
    "crates/net-constants",
    "tools/coh-rtc",
    "tests",
]
resolver = "2"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
debug = 0
panic = "abort"
incremental = false
strip = "debuginfo"
split-debuginfo = "off"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
cohesix-ticket = { path = "crates/cohesix-ticket" }
cohsh-core = { path = "crates/cohsh-core" }
secure9p-codec = { path = "crates/secure9p-codec" }
secure9p-core = { path = "crates/secure9p-core" }
secure9p-transport = { path = "crates/secure9p-transport" }
anyhow = "1.0"
thiserror = { version = "2.0", default-features = false }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
rand = "0.9"
cohesix-net-constants = { path = "crates/net-constants" }
cohesix-proto = { path = "apps/cohesix-proto" }
console-ack-wire = { path = "apps/console-ack-wire" }
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc"] }
signature = { version = "2.2", default-features = false }
cohesix-cas = { path = "crates/cohesix-cas" }

[patch.crates-io]
sel4-sys = { path = "crates/sel4-sys" }
