# CLASSIFICATION: COMMUNITY
# Filename: cohesix-9p/Cargo.toml v0.4
# Author: Lukas Bower
# Date Modified: 2026-12-31

[package]
name = "cohesix-9p"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

ninep = { version = "0.3", optional = true }

[dev-dependencies]
serial_test = "2.0"

[features]
default = ["inprocess"]
inprocess = []
posix = ["ninep"]
