# CLASSIFICATION: COMMUNITY
# Filename: cohesix-secure9p/Cargo.toml v0.4
# Author: Lukas Bower
# Date Modified: 2027-01-31
[package]
name = "cohesix-secure9p"
version = "0.2.0"
edition = "2021"


[dependencies]
ninep = { path = "../third_party/ninep_portable" }


[features]
default = ["std"]
std = []
tls = []
