# CLASSIFICATION: COMMUNITY
# Filename: Cargo.toml v0.7
# Author: Lukas Bower
# Date Modified: 2028-11-28

[workspace]
members = [
    "sel4-sys-extern-wrapper",
    "cohesix",
    "cohesix-9p",
    "cohesix-secure9p",
    "cohesix_root",
    "tools/cli",
    "tools/scenario_compiler",
    "tools/cohfuzz",
]
resolver = "2"

[workspace.dependencies]
sel4-sys-extern-wrapper = { path = "sel4-sys-extern-wrapper" }

[workspace.metadata.release]
tag-name = "v{{version}}"
push = false
allow-branch = ["main"]

[profile.release]
panic = "abort"
strip = false
lto = true
codegen-units = 1
debug = true

[profile.dev]
panic = "abort"
strip = "symbols"
opt-level = "z"
debug = false
debug-assertions = false

[patch.crates-io]
ninep = { path = "../third_party/ninep_portable" }
