# CLASSIFICATION: COMMUNITY
# Filename: Cargo.toml v0.8
# Author: Lukas Bower
# Date Modified: 2030-08-09

[workspace]
members = [
    "sel4-sys-extern-wrapper",
    "cohesix",
    "cohesix-9p",
    "cohesix-secure9p",
    "cohesix_root",
    "tools/cli",
    "tools/scenario_compiler",
    "tools/cohfuzz",
]
resolver = "2"

[workspace.dependencies]
sel4-sys-extern-wrapper = { path = "sel4-sys-extern-wrapper" }

[workspace.metadata.release]
tag-name = "v{{version}}"
push = false
allow-branch = ["main"]

[profile.release]
panic = "abort"
strip = "debuginfo"
lto = true
codegen-units = 1
debug = false

[profile.release.package.cohesix_root]
# Author: Lukas Bower
debug = false

[profile.dev]
panic = "abort"
strip = "symbols"
opt-level = "z"
debug = false
debug-assertions = false

[patch.crates-io]
ninep = { path = "../third_party/ninep_portable" }
