# Author: Lukas Bower
[package]
name = "cohsh"
version = "0.1.0"
edition = "2021"
description = "Cohesix shell prototype using the live NineDoor Secure9P transport"
license = "MIT"

[features]
default = []
# TCP transport pulls in `std` networking and is opt-in so offline workflows
# can build without socket dependencies.
tcp = []

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
cohesix-ticket = { workspace = true }
secure9p-wire = { workspace = true }
nine-door = { path = "../nine-door" }
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
