# Author: Lukas Bower
[package]
name = "gpu-bridge-host"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
cohesix-ticket = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nvml-wrapper = { version = "0.8", optional = true }

[features]
default = []
nvml = ["nvml-wrapper"]
