# Author: Lukas Bower
# Purpose: Define the gpu-bridge-host crate metadata, features, and dependencies.
[package]
name = "gpu-bridge-host"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
nvml-wrapper = { version = "0.11.0", optional = true }

[features]
default = []
nvml = ["nvml-wrapper"]
