# Author: Lukas Bower
[package]
name = "nine-door"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

[target.'cfg(not(target_os = "none"))'.dependencies]
anyhow = { workspace = true }
cohesix-ticket = { workspace = true }
secure9p-wire = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
worker-gpu = { path = "../worker-gpu" }
gpu-bridge-host = { path = "../gpu-bridge-host" }
