# Author: Lukas Bower
# Purpose: Configure the NineDoor Secure9P server crate dependencies and metadata.
[package]
name = "nine-door"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

[target.'cfg(not(target_os = "none"))'.dependencies]
anyhow = { workspace = true }
cohesix-ticket = { workspace = true }
cohesix-proto = { workspace = true }
secure9p-codec = { workspace = true }
secure9p-core = { workspace = true }
thiserror = { workspace = true, features = ["std"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
worker-gpu = { path = "../worker-gpu" }
gpu-bridge-host = { path = "../gpu-bridge-host" }
trace-model = { path = "../../crates/trace-model" }
log = "0.4"
