# Author: Lukas Bower
[package]
name = "root-task"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[features]
default = []
net = ["net-console"]
kernel = [
    "dep:sel4-sys",
    "dep:sel4-runtime",
    "dep:sel4-panicking",
    "bootstrap-trace",
    "dep:linked_list_allocator",
]
net-console = [
    "dep:smoltcp",
    "dep:spin",
]
net-irq = []
sel4-debug = []
debug-input = []
bootstrap-trace = [
    "dep:spin",
]

[dependencies]
cohesix-ticket = { workspace = true }
embedded-io = { version = "0.4", default-features = false }
nb = "1.1"
portable-atomic = "1.6"
linked_list_allocator = { version = "0.10", default-features = false, optional = true, features = ["use_spin"] }
log = { version = "0.4", default-features = false }
static_assertions = "1.1"
[dependencies.sel4-sys]
version = "0.0.28"
optional = true
path = "../../crates/sel4-sys"
[dependencies.sel4-runtime]
version = "0.7.0"
optional = true
path = "../../crates/sel4-runtime"
[dependencies.sel4-panicking]
version = "0.7.0"
optional = true
path = "../../crates/sel4-panicking"
[dependencies.heapless]
version = "0.8"

[dependencies.smoltcp]
version = "0.11"
optional = true
default-features = false
features = [
    "alloc",
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
]

[dependencies.spin]
version = "0.9"
optional = true

[target.'cfg(not(target_os = "none"))'.dependencies]
anyhow = { workspace = true }
secure9p-wire = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
trybuild = "1.0"

[build-dependencies]
regex = "1.10"

