# Author: Lukas Bower
[package]
name = "root-task"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[features]
default = []   # no debug features by default (always pass --no-default-features)
# Feature combinations validated for developer builds (explicitly opt-in when using --no-default-features):
# - Serial-only dev boot on QEMU virt: kernel + bootstrap-trace + serial-console
# - Serial + TCP console on QEMU virt: kernel + bootstrap-trace + serial-console + net-console (implies `net`)
# - Convenience umbrella for the common virt dev path: dev-virt
# Debug/developer toggles intentionally excluded when using --no-default-features:
# cap-probes, canonical_cspace, bootstrap-minimal, bootstrap-debug, untyped-debug,
# trace-heavy-init, strict-bootstrap, net-irq, sel4-debug, debug-input, ffi_shim
# (enable explicitly when needed).
dev-virt = [
    "kernel",
    "bootstrap-trace",
    "serial-console",
    "net-console", # pulls in `net` and TCP console wiring
]
cap-probes = []   # gate experimental cap ops (tests/bench only)
net = []
canonical_cspace = ["kernel"]
bootstrap-minimal = []
bootstrap-debug = []
serial-console = []
untyped-debug = []
trace-heavy-init = []
strict-bootstrap = []
kernel = [
    "dep:sel4-sys",
    "dep:sel4-runtime",
    "dep:sel4-panicking",
    "bootstrap-trace",
    "dep:linked_list_allocator",
]
mock-sel4 = ["kernel"]
net-console = [
    "net",
    "dep:smoltcp",
    "dep:spin",
]
net-irq = []
sel4-debug = []
debug-input = []
bootstrap-trace = [
    "dep:spin",
]
test-support = []
ffi_shim = [
    "dep:spin",
]

[dependencies]
cohesix-ticket = { workspace = true }
embedded-io = { version = "0.7.1", default-features = false }
nb = "1.1"
portable-atomic = "1.6"
linked_list_allocator = { version = "0.10", default-features = false, optional = true, features = ["use_spin"] }
log = { version = "0.4", default-features = false }
static_assertions = "1.1"
trace-model = { path = "../../crates/trace-model" }
[dependencies.sel4-sys]
version = "0.0.28"
optional = true
path = "../../crates/sel4-sys"
[dependencies.sel4-panicking]
version = "0.7.0"
optional = true
path = "../../crates/sel4-panicking"
default-features = false
[dependencies.heapless]
version = "0.9.1"

[dependencies.smoltcp]
version = "0.12.0"
optional = true
default-features = false
features = [
    "alloc",
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
]

[dependencies.spin]
version = "0.10.0"
optional = true

[dependencies.sel4-runtime]
version = "0.7.0"
optional = true
path = "../../crates/sel4-runtime"

[target.'cfg(not(target_os = "none"))'.dependencies]
anyhow = { workspace = true }
secure9p-wire = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
trybuild = "1.0"
[dev-dependencies.sel4-sys]
version = "0.0.28"
path = "../../crates/sel4-sys"

[build-dependencies]
regex = "1.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
