# Author: Lukas Bower
# Purpose: Configure the root-task crate dependencies and metadata.
[package]
name = "root-task"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[features]
default = []   # no debug features by default (always pass --no-default-features)
# Feature combinations validated for developer builds (explicitly opt-in when using --no-default-features):
# - Serial-only dev boot on QEMU virt: kernel + bootstrap-trace + serial-console
# - Serial + TCP console on QEMU virt: cohesix-dev
# - Convenience legacy profile for QEMU virt: dev-virt (private; included by cohesix-dev)
# Feature inventory:
# A) Product / hardware profile flags: kernel, serial-console, net-console, net, net-backend-virtio,
#    timers-arch-counter, cache-maintenance
# B) Dev / bring-up flags: cohesix-dev, dev-virt, bootstrap-trace, cache-trace, control-trace,
#    timer-trace, net-diag, net-trace-31337, net-selftest, panic-backtrace, trace-heavy-init,
#    untyped-debug, cap-probes, canonical_cspace, bootstrap-minimal, bootstrap-debug,
#    bootstrap-early-exit, strict-bootstrap, sel4-debug, debug-input, tcp-echo-31337,
#    net-outbound-probe, virtio_guard_queue, virtio-mmio-legacy, net-virtio-tx-v2,
#    test-support, ffi_shim, mock-sel4, bypass-timers, bypass-timers-ipc
# C) Removed (obsolete): allow-ipcbuf-fallback, net-irq, timers-bypass
cohesix-dev = [
    "dev-virt",
    "cache-trace",
    "control-trace",
    "net-diag",
    "timer-trace",
]
dev-virt = [
    "kernel",
    "bootstrap-trace",
    "serial-console",
    "net-console", # pulls in `net` and TCP console wiring
    "net-trace-31337",
    "net-backend-virtio",
    "net-selftest",
    "panic-backtrace",
]
bypass-timers = []
bypass-timers-ipc = []
timers-arch-counter = []
timer-trace = []
cap-probes = []   # gate experimental cap ops (tests/bench only)
net = []
control-trace = []
canonical_cspace = ["kernel"]
bootstrap-minimal = []
bootstrap-debug = []
bootstrap-early-exit = []
serial-console = []
untyped-debug = []
trace-heavy-init = []
strict-bootstrap = []
kernel = [
    "dep:sel4-sys",
    "dep:sel4-runtime",
    "dep:sel4-panicking",
    "bootstrap-trace",
    "dep:linked_list_allocator",
]
mock-sel4 = ["kernel"]
net-console = [
    "net",
    "dep:smoltcp",
    "dep:spin",
]
net-trace-31337 = []
sel4-debug = []
debug-input = []
tcp-echo-31337 = ["net-console"]
net-outbound-probe = ["net-console"]
net-backend-virtio = []
net-selftest = ["net-console"]
virtio-mmio-legacy = []
net-virtio-tx-v2 = []
cache-maintenance = ["dep:sel4-sys", "dep:spin"]
cache-trace = []
virtio_guard_queue = []
net-diag = ["net"]
bootstrap-trace = [
    "dep:spin",
]
test-support = []
panic-backtrace = []
ffi_shim = [
    "dep:spin",
]

[dependencies]
cohesix-ticket = { workspace = true }
cohesix-proto = { workspace = true }
console-ack-wire = { workspace = true }
embedded-io = { version = "0.7.1", default-features = false }
nb = "1.1"
portable-atomic = "1.6"
secure9p-codec = { workspace = true }
sha2 = { workspace = true, default-features = false }
cohesix-cas = { workspace = true }
sidecar-bus = { path = "../sidecar-bus", default-features = false }
worker-lora = { path = "../worker-lora", default-features = false }
ed25519-dalek = { workspace = true }
signature = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true, default-features = false, features = ["alloc"] }
linked_list_allocator = { version = "0.10", default-features = false, optional = true, features = ["use_spin"] }
log = { version = "0.4", default-features = false }
static_assertions = "1.1"
trace-model = { path = "../../crates/trace-model" }
cohesix-net-constants = { workspace = true }
[dependencies.sel4-sys]
version = "0.0.28"
optional = true
path = "../../crates/sel4-sys"
[dependencies.sel4-panicking]
version = "0.7.0"
optional = true
path = "../../crates/sel4-panicking"
default-features = false
[dependencies.heapless]
version = "0.9.1"

[dependencies.smoltcp]
version = "0.12.0"
optional = true
default-features = false
features = [
    "alloc",
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
    "socket-udp",
]

[dependencies.spin]
version = "0.10.0"
optional = true

[dependencies.sel4-runtime]
version = "0.7.0"
optional = true
path = "../../crates/sel4-runtime"

[target.'cfg(not(target_os = "none"))'.dependencies]
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
trybuild = "1.0"
[dev-dependencies.sel4-sys]
version = "0.0.28"
path = "../../crates/sel4-sys"

[build-dependencies]
regex = "1.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
