# Author: Lukas Bower
# Purpose: Configure the worker-bus crate dependencies and metadata.
[package]
name = "worker-bus"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

[target.'cfg(not(target_os = "none"))'.dependencies]
anyhow = { workspace = true }
cohesix-ticket = { workspace = true }
secure9p-codec = { workspace = true }
