# Author: Lukas Bower
[package]
name = "worker-gpu"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
cohesix-ticket = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
secure9p-wire = { workspace = true }
