# Author: Lukas Bower
# Purpose: Configure the Cohesix ticket crate dependencies and metadata.
[package]
name = "cohesix-ticket"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
blake3 = { version = "1.5", default-features = false, features = ["pure"] }
hex = { workspace = true }
thiserror = { workspace = true, default-features = false }
