# Author: Lukas Bower
# Purpose: Configure the Cohesix shared cohsh-core grammar/transport crate.
[package]
name = "cohsh-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

description = "Shared Cohesix console grammar and transport primitives"

[features]
default = []
tcp = ["dep:smoltcp"]

[dependencies]
cohesix-ticket = { workspace = true }
cohesix-proto = { workspace = true }
console-ack-wire = { workspace = true }
heapless = "0.9.1"
secure9p-codec = { workspace = true }

[dependencies.smoltcp]
version = "0.12.0"
optional = true
default-features = false
features = ["alloc", "proto-ipv4", "socket-tcp"]

[dev-dependencies]
sha2 = { workspace = true }
hex = { workspace = true }
