# Author: Lukas Bower
# Purpose: Configure domain-intents crate metadata and dependencies.
[package]
name = "domain-intents"
version = "0.1.0"
edition = "2021"
authors = ["Lukas Bower <lukas@example.com>"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true, features = ["std"] }
