# Author: Lukas Bower
[package]
name = "sel4-panicking"
version = "0.7.0"
edition = "2021"
publish = false

[dependencies]
sel4-sys = { path = "../sel4-sys" }
heapless = { version = "0.9.1", default-features = false }
spin = { version = "0.10.0", default-features = false, features = ["mutex", "spin_mutex"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(sel4_config_printing)'] }
