# Author: Lukas Bower
[package]
name = "sel4-sys"
version = "0.0.28"
edition = "2021"
publish = false
build = "build.rs"

[features]
default = []

[dependencies]
log = { version = "0.4", default-features = false }

[build-dependencies]
bindgen = { version = "0.72", default-features = false, features = ["runtime"] }
