# CLASSIFICATION: COMMUNITY
# Filename: tools/cli/Cargo.toml v0.2
# Author: Lukas Bower
# Date Modified: 2025-08-16

[package]
name = "cohcli_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
cohesix = { path = "../.." }
ninep = "0.3"
cohesix-9p = { path = "../../cohesix-9p", features = ["posix"] }
