# CLASSIFICATION: COMMUNITY
# Filename: tools/cli/Cargo.toml v0.3
# Author: Lukas Bower
# Date Modified: 2027-09-30

[package]
name = "cohcli_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
cohesix = { path = "../../workspace/cohesix" }
ninep = "0.3"
cohesix-9p = { path = "../../workspace/cohesix-9p", features = ["posix"] }

[features]
default = []
