# CLASSIFICATION: COMMUNITY
# Filename: tools/cli/Cargo.toml v0.4
# Author: Lukas Bower
# Date Modified: 2027-11-05

[package]
name = "cohcli_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
cohesix = { path = "../../workspace/cohesix" }
ninep = "0.3"
cohesix-9p = { path = "../../workspace/cohesix-9p", features = ["posix"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
humantime = "2"
notify = "6"
glob = "0.3"

[features]
default = []

[[bin]]
name = "srvctl"
path = "src/bin/srvctl.rs"

[[bin]]
name = "indexserver"
path = "src/bin/indexserver.rs"

[[bin]]
name = "devwatcher"
path = "src/bin/devwatcher.rs"

[[bin]]
name = "physics-server"
path = "src/bin/physics_server.rs"
