# Author: Lukas Bower
# Purpose: Configure the coh-rtc manifest compiler crate.
[package]
name = "coh-rtc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_cbor = "0.11"
sha2 = { workspace = true }
hex = { workspace = true }
toml = "0.8"
cohesix-cas = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3.10"
