# CLASSIFICATION: COMMUNITY
# Filename: cohesix-9p/Cargo.toml v0.6
# Author: Lukas Bower
# Date Modified: 2027-08-11

[package]
name = "cohesix-9p"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
spin = "0.9"
once_cell = "1"

ninep = { version = "0.3", optional = true }

[dev-dependencies]
serial_test = "2.0"
serde = { version = "1", features = ["std", "derive"] }

[features]
default = ["std", "inprocess"]
std = []
inprocess = []
posix = ["ninep"]
